cabal-version:      2.4
name:               portal
version:            0.1.0.0

synopsis:            A tool to quickly switch between directories
description:
    A tool to quickly switch between directories 
    Please see README.md for more details
homepage:            https://github.com/iamHrithikRaj/portal#readme
license:             MIT
license-file:        LICENSE
author:              Hrithik Raj
maintainer:          hraj2661999@gmail.com
copyright:           2021 Hrithik Raj
category:            Tools
build-type:          Simple
bug-reports:         https://github.com/iamHrithikRaj/portal/issues 
stability:           Alpha


extra-source-files: 
    CHANGELOG.md
    README.md
    portal.sh

executable portal-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , turtle
                     , optparse-applicative
                     , system-filepath
                     , text
                     , configurator
                     , aeson
                     , bytestring
                     , ansi-terminal
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/iamHrithikRaj/portal